--- a/_posts/2025-07-07-topology.md
+++ b/_posts/2025-07-07-topology.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Topology and Edge States"
 date: 2025-07-07 12:00:00 +0000
+last_updated: 2025-10-12
 categories: research
 ---
 
@@ -85,7 +86,7 @@ In our model, the indices of these bulk eigenvector degeneracies can change but 
 
 # Closing thoughts
 
-The above is a fairly informal discussion and so **for more precise technical discussions, we hope you read the paper!** There is also a lot of detail that couldn't be included here. One underlying tool we use a lot is the full **complex band structure.** In Hermitian systems, we often draw band structures for real energy $$E$$ and real wave-vector $$k$$, but a lesson from our work is that the $$E$$ and $$k$$ being complex is important even in Hermitian systems. This complex band structure underlies many other physical phenomena.
+The above is a fairly informal discussion and so **for more precise technical discussions, we hope you read the paper!** There is also a lot of detail that couldn't be included here. One underlying tool we use a lot is the full **complex band structure.** In Hermitian systems, we often draw band structures for real energy $$E$$ and real wave-vector $$k$$, but a lesson from our work is that the complex band structure is important even in Hermitian systems. This complex band structure also underlies many other physical phenomena.
 
 <div style="text-align: center;">
 <img src="/assets/images/riemannimk.jpg" alt="SSH-Creutz model diagram" style="width: 60%; height: auto; display: block; margin: 0 auto;">
@@ -95,3 +96,9 @@ The above is a fairly informal discussion and so **for more precise technical di
 Above is a pretty picture of a complex band structure from the Supplementary Material in our paper. It is based off the **Appendix A section of Heming's [tutorial](https://opg.optica.org/aop/fulltext.cfm?uri=aop-16-3-659&id=560898) which also explains many of the other algebraic tools used in our work.**
 
 I thank my co-authors Heming, Sasha and Shanhui in this work. In particular, many of the algebraic formulas that underlie the paper and the actual proof for our topological invariant originated from co-first author Heming.
+
+---
+
+<div style="text-align: right; color: #666; font-style: italic; font-size: 0.9em; margin-top: 2em;">
+Last updated: October 12, 2025
+</div>
